added add, get by id, get by server and id, get random
